--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="show_simple_notification">show simple notification</string>
+    <string name="channel_description">channel_description</string>
+    <string name="channel_name">channel_name</string>
 </resources>
