--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="show_simple_notification">show simple notification</string>
     <string name="channel_description">channel_description</string>
     <string name="channel_name">channel_name</string>
+    <string name="show_progress_notification">show progress Notification</string>
+    <string name="show_indeterminate_progress_notification">show indeterminate progress notification</string>
 </resources>
