--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Notifycation</string>
+    <string name="app_name">Notification</string>
     <string name="action_settings">Settings</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
@@ -9,9 +9,15 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
-    <string name="show_simple_notification">show simple notification</string>
+
     <string name="channel_description">channel_description</string>
     <string name="channel_name">channel_name</string>
-    <string name="show_progress_notification">show progress Notification</string>
-    <string name="show_indeterminate_progress_notification">show indeterminate progress notification</string>
+
+    <string name="show_simple_notification">simple notification</string>
+    <string name="progress_notification">progress Notification</string>
+    <string name="indeterminate_progress_notification">indeterminate progress notification</string>
+    <string name="expandable_picture_notification">expandable picture notification</string>
+    <string name="expandable_text_notification">expandable text notification</string>
+
+    <string name="action">action</string>
 </resources>
