--- a/notification/app/src/main/res/values/strings.xml
+++ b/notification/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="group_notification">group notification</string>
 
     <string name="action">action</string>
+    <string name="notification_chanel">notification chanel</string>
 </resources>
