added cloud messaging test function

--- a/firebase_notification/app/src/main/res/values/strings.xml
+++ b/firebase_notification/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">FirebaseNotification</string>
+    <string name="access_registered_token">access registered token</string>
+    <string name="msg_token_fmt">token: %s</string>
 </resources>
