--- a/intent/app/src/main/res/values/strings.xml
+++ b/intent/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="main_activity">Main Activity</string>
+    <string name="go_to_second_activity">go to second activity</string>
+    <string name="second_activity">second activity</string>
 </resources>
