added notification with intent

--- a/notification/app/src/main/res/values/strings.xml
+++ b/notification/app/src/main/res/values/strings.xml
@@ -19,6 +19,8 @@
     <string name="expandable_picture_notification">expandable picture notification</string>
     <string name="expandable_text_notification">expandable text notification</string>
     <string name="group_notification">group notification</string>
+    <string name="action_notification">action notification</string>
+    <string name="content_notification">content notification</string>
 
     <string name="action">action</string>
     <string name="notification_chanel">notification chanel</string>
