--- a/alarm-manager/app/src/main/res/values/strings.xml
+++ b/alarm-manager/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="elapsed_realtime_wakeup">ELAPSED_REALTIME_WAKEUP</string>
+    <string name="elapsed_realtime">ELAPSED_REALTIME</string>
+    <string name="rtc">RTC</string>
+    <string name="rtc_wakeup">RTC_WAKEUP</string>
 </resources>
