--- a/firebase_authentication/app/src/main/res/values/strings.xml
+++ b/firebase_authentication/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">FirebaseAuthentication</string>
     <string name="sign_out">Sign Out</string>
+    <string name="revoke">Revoke</string>
 </resources>
