--- a/work_manager/app/src/main/res/values/strings.xml
+++ b/work_manager/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">WorkManager</string>
+    <string name="notification_channel_id">notification channel</string>
+    <string name="channel_name">channel name</string>
 </resources>
