--- a/action_mode/app/src/main/res/values/strings.xml
+++ b/action_mode/app/src/main/res/values/strings.xml
@@ -9,4 +9,10 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="activity_primary_action_mode">[Activity] Primary Action Mode</string>
+    <string name="activity_floating_action_mode">[Activity] Floating Action Mode</string>
+    <string name="done">done</string>
+    <string name="close">close</string>
+    <string name="view_primary_action_mode">[View] Primary Action Mode</string>
+    <string name="view_floating_action_mode">[View] Floating Action Mode</string>
 </resources>
