--- a/firebase_storage/app/src/main/res/values/strings.xml
+++ b/firebase_storage/app/src/main/res/values/strings.xml
@@ -9,4 +9,9 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="download_images">Download Images</string>
+    <string name="upload_local_image">Upload Local Image</string>
+    <string name="download_image_to_local_file">Download image to local file</string>
+    <string name="delete_image">Delete Image</string>
+    <string name="list_all_images">List All Images</string>
 </resources>
