--- a/service/app/src/main/res/values/strings.xml
+++ b/service/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Service</string>
     <string name="start_main_service">Start Main Service</string>
+    <string name="done">Done</string>
 </resources>
