--- a/bluetooth_connection/app/src/main/res/values/strings.xml
+++ b/bluetooth_connection/app/src/main/res/values/strings.xml
@@ -8,4 +8,14 @@
     <string name="peripheral">peripheral</string>
     <string name="received_message">received message</string>
     <string name="sender_info">sender info</string>
+    <string name="socket">socket</string>
+    <string name="ble">ble</string>
+    <string name="sender">sender</string>
+    <string name="receiver">receiver</string>
+    <string name="ble_central">ble central</string>
+    <string name="ble_peripheral">ble peripheral</string>
+    <string name="socket_central">socket central</string>
+    <string name="socket_peripheral">socket peripheral</string>
+    <string name="connected_device">connected device:</string>
+    <string name="none">NONE</string>
 </resources>
