feat: image transfer
Bluetoothを介して、画像を送信できる機能を追加した。

--- a/bluetooth_connection/app/src/main/res/values/strings.xml
+++ b/bluetooth_connection/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="socket_peripheral">socket peripheral</string>
     <string name="connected_device">connected device:</string>
     <string name="none">NONE</string>
+    <string name="send">send</string>
+    <string name="image_transfer">Image Transfer</string>
 </resources>
