--- a/media-store/app/src/main/res/values/strings.xml
+++ b/media-store/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">MediaStore</string>
     <string name="load_image">load image</string>
     <string name="show_select_tool">show select tool</string>
+    <string name="title_activity_main">MainActivity</string>
 </resources>
