--- a/service/app/src/main/res/values/strings.xml
+++ b/service/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Service</string>
     <string name="start_main_service">Start Main Service</string>
     <string name="done">Done</string>
+    <string name="scheduled_service">Scheduled Service</string>
+    <string name="start_full_screen_service">Start Full Screen Service</string>
 </resources>
